k8s/app/battle-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: battle-manager
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: battle-manager
  template:
    metadata:
      labels:
        app: battle-manager
    spec:
      serviceAccountName: app-sa
      containers:
      - name: battle-manager
        resources:
          requests:
            cpu: "300m"
            memory: "384Mi"
          limits:
            cpu: "800m"
            memory: "768Mi"
        # critical required for HPA and Fargate sizing
        image: s1natex/pokemon_game:battle-manager-initial # ci updates image tag here
        ports:
        - containerPort: 8084
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8084
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8084
          initialDelaySeconds: 20
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: battle-manager
  namespace: app
spec:
  selector:
    app: battle-manager
  ports:
  - port: 8084
    targetPort: 8084
    name: http
