k8s/app/pokemon-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokemon-manager
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pokemon-manager
  template:
    metadata:
      labels:
        app: pokemon-manager
    spec:
      serviceAccountName: app-sa
      containers:
      - name: pokemon-manager
        image: s1natex/pokemon_game:pokemon-manager-initial # ci updates image tag here
        ports:
        - containerPort: 8081
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 20
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: pokemon-manager
  namespace: app
spec:
  selector:
    app: pokemon-manager
  ports:
  - port: 8081
    targetPort: 8081
    name: http
