k8s/app/scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      serviceAccountName: app-sa
      containers:
        - name: scheduler
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          # critical required for HPA and Fargate sizing
          image: docker.io/s1natex/pokemon_game:scheduler-18102025-1557-9af5ede # ci updates image tag here
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: scheduler
  namespace: app
spec:
  selector:
    app: scheduler
  ports:
    - port: 8082
      targetPort: 8082
      name: http
  template:
    spec:
      containers: []
