k8s/app/trainer-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trainer-manager
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trainer-manager
  template:
    metadata:
      labels:
        app: trainer-manager
    spec:
      serviceAccountName: app-sa
      containers:
      - name: trainer-manager
        image: s1natex/pokemon_game:trainer-manager-initial # ci updates image tag here
        ports:
        - containerPort: 8085
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8085
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8085
          initialDelaySeconds: 20
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: trainer-manager
  namespace: app
spec:
  selector:
    app: trainer-manager
  ports:
  - port: 8085
    targetPort: 8085
    name: http
